# clp-evsp-csp

./: .gitignore  CMakeLists.txt  constants.h  csp.cpp  csp.h  helpers.cpp  helpers.h  logger.h  main.cpp  makefile  operators.cpp  operators.h  vehicle.cpp  vehicle.h
Ann_Arbor/: compatibility_matrix.txt  terminal_data.txt
data/Ann_Arbor/: trip_data.txt
output/: Ann_Arbor_log.txt  SCMTD_log.txt
